# Movie-Maestro

./: CMakeLists.txt  README.md  main.cpp  mergesort.h  movies.h  parse.h  quicksort.h  search.h  tiebreaker.h  welcome.h
data/: combineData.py
